Don't save applet "code" locally if there is an "archive". b=430283 r+sr=jst